why choose us section created

--- a/index.html
+++ b/index.html
@@ -545,6 +545,97 @@
             </div>
           </div>
         <!-- team section end from here -->
+
+        <!-- why choose us starts from here-->
+        <section class="mt-5 lg:mb-32 mx-5 lg:mt-20 lg:mx-auto">
+          <h1 class="text-2xl lg:text-5xl text-[#121212] font-extrabold text-center">Why Choose Us</h1>
+          <p class="lg:text-base text-[#121212] text-center px-14 pt-4 pb-8 lg:mt-6 lg:mb-12">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC,<br> making it over 2000 years old.</p>
+          
+          <!-- this Choose us container -->
+          <div class="grid grid-cols-1 gap-6 md:grid-cols-1 lg:grid-cols-3 lg:gap-6">
+            <div class="flex-1 space-y-16 sm:px-16 lg:px-0">
+              <!-- first content -->
+              <div class=" flex flex-col lg:flex-row justify-center items-center gap-5">
+                <div>
+                  <i class="fa-solid fa-users text-2xl bg-[#12121219] border-2 rounded-full w-16 h-16 pl-4 pt-3"></i>
+                </div>
+                <div>
+                  <h3 class="text-center lg:text-left text-2xl font-extrabold ">Dedicated Team</h3>
+                  <div class=" divider divide-x-2 w-24 mt-1 mx-auto lg:mx-0 mb-0 text-[#121212]"></div>
+                  <p class="text-center px-20 lg:px-0 lg:text-left font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+
+              <!-- second content -->
+              <div class="flex flex-col lg:flex-row justify-center items-center gap-5">
+                <div>
+                  <i class="fa-regular fa-heart text-2xl bg-[#12121219] border-2 rounded-full w-16 h-16 pl-5 pt-4"></i>
+                </div>
+                <div>
+                  <h3 class="text-center lg:text-left text-2xl font-extrabold ">Fresh is Best</h3>
+                  <div class=" divider divide-x-2 w-24 mt-1 mx-auto lg:mx-0 mb-0 text-[#121212]"></div>
+                  <p class="text-center px-20 lg:px-0 lg:text-left font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+
+              <!-- third content -->
+              <div class="flex flex-col lg:flex-row justify-center items-center gap-5">
+                <div>
+                  <i class="fa-solid fa-gift text-2xl bg-[#12121219] border-2 rounded-full w-16 h-16 pl-5 pt-3"></i>
+                </div>
+                <div>
+                  <h3 class="text-center lg:text-left text-2xl font-extrabold ">Gift Certificates</h3>
+                  <div class=" divider divide-x-2 w-24 mt-1 mx-auto lg:mx-0 mb-0 text-[#121212]"></div>
+                  <p class="text-center px-20 lg:px-0 lg:text-left font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- images content -->
+            <div class="flex-1 order-first lg:order-none">
+              <img class="sm:w-full" src="images/whychoose1.png" alt="Fruit">
+            </div>
+
+            <!-- first content -->
+            <div class="flex-1 sm:px-16 lg:px-0 space-y-16">
+              <div class="flex flex-col-reverse lg:flex-row justify-center items-center gap-5">
+                <div>
+                  <h3 class="text-center lg:text-right text-2xl font-extrabold ">Integrated Supplier</h3>
+                  <div class=" divider divide-x-2 w-24 mt-1 lg:ml-80 mx-auto lg:mx-0 mb-0 text-[#121212]"></div>
+                  <p class="text-center px-20 lg:px-0 lg:pl-3 lg:text-right font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+                <div>
+                  <i class="fa-brands fa-apple text-2xl bg-[#12121219] border-2 rounded-full w-16 h-16 pl-5 pt-3"></i>
+                </div>
+              </div>
+
+              <!-- second content -->
+              <div class="flex flex-col-reverse lg:flex-row justify-center items-center gap-5">
+                <div>
+                  <h3 class="text-center lg:text-right text-2xl font-extrabold ">Sustainable Practice</h3>
+                  <div class="divider divide-x-2 w-24 mt-1 lg:ml-80 mx-auto lg:mx-0 mb-0 text-[#121212]"></div>
+                  <p class="text-center px-20 lg:px-0 lg:text-right font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-ice-cream text-2xl bg-[#12121219] border-2 rounded-full w-16 h-16 pl-5 pt-[14px]"></i>
+                </div>
+              </div>
+
+              <!-- third content -->
+              <div class="flex flex-col-reverse lg:flex-row justify-center items-center gap-5">
+                <div>
+                  <h3 class="text-center lg:text-right text-2xl font-extrabold ">The Benefits Only</h3>
+                  <div class=" divider divide-x-2 w-24 mt-1 lg:ml-80 mx-auto lg:mx-0 mb-0 text-[#121212]"></div>
+                  <p class="text-center px-20 lg:px-0 lg:text-right font-medium">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+                <div>
+                  <i class="fa-regular fa-thumbs-up text-2xl bg-[#12121219] border-2 rounded-full w-16 h-16 pl-5 pt-3"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- why choose us end from here-->
     </main>
       <!-- footer section starts from here -->
       <footer class="footer footer-center p-10 bg-[#121212] text-base-content mt-10">
