--- a/index.html
+++ b/index.html
@@ -145,23 +145,23 @@
     <main class="container mx-auto">
       <!-- bonus section starts from here -->
       <div class="lg:w-4/5 lg:h-60 lg:flex lg:items-center lg:justify-center lg:bg-white lg:text-center lg:mx-auto lg:-mt-20 lg:shadow-lg lg:rounded-lg lg:drop-shadow-lg lg:gap-20">
-        <div class="hidden lg:block md:block">
+        <div class="hidden lg:block ">
           <img src="./images/fruit1.png" alt="fruits" />
           <p>Grapes</p>
         </div>
-        <div class="hidden lg:block md:block">
+        <div class="hidden lg:block">
           <img src="./images/fruit2.png" alt="fruits" />
           <p>Orange</p>
         </div>
-        <div class="hidden lg:block md:block">
+        <div class="hidden lg:block">
           <img src="./images/fruit3.png" alt="fruits" />
           <p>Mango</p>
         </div>
-        <div class="hidden lg:block md:block">
+        <div class="hidden lg:block">
           <img src="./images/fruit4.png" alt="fruits" />
           <p>Strawberry</p>
         </div>
-        <div class="hidden lg:block md:block">
+        <div class="hidden lg:block">
           <img src="./images/fruit5.png" alt="fruits" />
           <p>Pomegranate</p>
         </div>
@@ -216,7 +216,7 @@
         </div>
       </div>
       
-      <div class="lg:flex justify-around my-10">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 my-10">
         <!-- card 1 -->
         <div class="card w-[342px] h-[400px] bg-base border-2">
           <figure class="mt-10">
@@ -500,9 +500,9 @@
                   Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.
                 </p>
               </div>
-              <div class="ourTeam grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-28 mt-16 mb-16">
+              <div class="ourTeam grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-28 mt-16 mb-16">
                 <div>
-                  <img class="lg:ml-5" src="./images/member1.png" alt="man"/>
+                  <img class="ml-36 md:ml-20 lg:ml-5" src="./images/member1.png" alt="man"/>
                   <h1 class="text-2xl text-center font-bold mt-5">Awlad Hossain</h1>
                   <p>Fruits Expert</p>
                   <div class="text-[#F85559] text-2xl">
@@ -512,7 +512,7 @@
                   </div>
                 </div>
                 <div>
-                  <img class="lg:ml-5" src="./images/member2.png" alt="women"/>
+                  <img class="ml-36 md:ml-16 lg:ml-5" src="./images/member2.png" alt="women"/>
                   <h1 class="text-2xl text-center font-bold mt-5">Safia Chowdhury</h1>
                   <p>Fruits Expert</p>
                   <div class="text-[#F85559] text-2xl">
@@ -522,7 +522,7 @@
                   </div>
                 </div>
                 <div>
-                  <img class="lg:ml-5" src="./images/member3.png" alt="man"/>
+                  <img class="ml-36 md:ml-20 lg:ml-5" src="./images/member3.png" alt="man"/>
                   <h1 class="text-2xl text-center font-bold mt-5">Rokib Hossain</h1>
                   <p>Fruits Expert</p>
                   <div class="text-[#F85559] text-2xl">
@@ -532,7 +532,7 @@
                   </div>
                 </div>
                 <div>
-                  <img class="lg:ml-5" src="./images/member4.png" alt="women"/>
+                  <img class="ml-36 md:ml-16 lg:ml-5" src="./images/member4.png" alt="women"/>
                   <h1 class="text-2xl text-center font-bold mt-5">Chaity</h1>
                   <p>Fruits Expert</p>
                   <div class="text-[#F85559] text-2xl">
